Fix contrast ratio

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,7 +10,7 @@
 
   /* Lightness */
   --l-text: 10%;
-  --l-text-secondary: 45%;
+  --l-text-secondary: 40%;
   --l-text-tertiary: 60%;
   --l-bg: 100%;
   --l-bg-inset: 97.5%;
